--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     <meta name="apple-mobile-web-app-title" content="">
 
     <link rel="stylesheet" href="stylesheets/normalize.css">
+    <link rel="stylesheet" href="stylesheets/typography.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
     <link rel="stylesheet" href="stylesheets/main.css">
-    <script data-main="javascripts/main" src="javascripts/lib/require-jquery.js"></script>
+    
+    <script data-main="javascripts/main" src="javascripts/lib/require.js"></script>
   </head>
   <body>
 
